# docs/web/api/openapi.yaml
@@ -6,13 +6,31 @@ info:
 servers:
 - url: /
 paths:
-  /users/create:
+  /re-news/sso/v1/public/google/login:
     post:
-      operationId: Test
+      description: Endpoint to login use google account
       responses:
         "201":
-          description: Created
-      summary: Test
+          content:
+            application/vnd.api+json:
+              schema:
+                $ref: '#/components/schemas/TokensPair'
+          description: User successfully login
+        "400":
+          content:
+            application/vnd.api+json:
+              schema:
+                $ref: '#/components/schemas/_re_news_sso_v1_public_google_login_post_400_response'
+          description: One of the parameters is invalid. Refer to the response body
+            for details.
+        "500":
+          content:
+            application/vnd.api+json:
+              schema:
+                $ref: '#/paths/~1re-news~1sso~1v1~1public~1google~1login/post/responses/400/content/application~1vnd.api%2Bjson/schema'
+          description: Internal server error
+      tags:
+      - Login
 components:
   schemas:
     TokensPair:
@@ -63,7 +81,7 @@ components:
     SessionAttributes:
       properties:
         account_id:
-          description: user id
+          description: account id
           format: uuid
           type: string
         client:
@@ -100,6 +118,43 @@ components:
           $ref: '#/components/schemas/Account_data'
       required:
       - data
+      type: object
+    _re_news_sso_v1_public_google_login_post_400_response_errors_inner:
+      properties:
+        title:
+          description: "Title is a short, human-readable summary of the problem"
+          example: Bad Request
+          type: string
+        detail:
+          description: Detail is a human-readable explanation specific to this occurrence
+            of the problem
+          example: Request body was expected
+          type: string
+        status:
+          description: Status is the HTTP status code applicable to this problem
+          enum:
+          - 400
+          - 401
+          - 403
+          - 404
+          - 409
+          - 500
+          example: 400
+          type: integer
+      required:
+      - status
+      - title
+      type: object
+    _re_news_sso_v1_public_google_login_post_400_response:
+      description: Standard JSON:API error
+      properties:
+        errors:
+          description: Non empty array of errors occurred during request processing
+          items:
+            $ref: '#/components/schemas/_re_news_sso_v1_public_google_login_post_400_response_errors_inner'
+          type: array
+      required:
+      - errors
       type: object
     TokensPair_data_attributes:
       properties:
@@ -197,6 +252,9 @@ components:
         role:
           description: Role
           type: string
+        subscription:
+          description: Subscription
+          type: string
         created_at:
           description: Created At
           format: date-time
@@ -209,6 +267,7 @@ components:
       - created_at
       - email
       - role
+      - subscription
       - updated_at
       type: object
     Account_data:
