# resources/model__re_news_sso_v1_public_google_login_post_400_response.go
@@ -1,0 +1,159 @@
+/*
+Cifra SSO REST API
+
+SSO REST API for Cifra app
+
+API version: 0.0.1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ReNewsSsoV1PublicGoogleLoginPost400Response type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ReNewsSsoV1PublicGoogleLoginPost400Response{}
+
+// ReNewsSsoV1PublicGoogleLoginPost400Response Standard JSON:API error
+type ReNewsSsoV1PublicGoogleLoginPost400Response struct {
+	// Non empty array of errors occurred during request processing
+	Errors []ReNewsSsoV1PublicGoogleLoginPost400ResponseErrorsInner `json:"errors"`
+}
+
+type _ReNewsSsoV1PublicGoogleLoginPost400Response ReNewsSsoV1PublicGoogleLoginPost400Response
+
+// NewReNewsSsoV1PublicGoogleLoginPost400Response instantiates a new ReNewsSsoV1PublicGoogleLoginPost400Response object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewReNewsSsoV1PublicGoogleLoginPost400Response(errors []ReNewsSsoV1PublicGoogleLoginPost400ResponseErrorsInner) *ReNewsSsoV1PublicGoogleLoginPost400Response {
+	this := ReNewsSsoV1PublicGoogleLoginPost400Response{}
+	this.Errors = errors
+	return &this
+}
+
+// NewReNewsSsoV1PublicGoogleLoginPost400ResponseWithDefaults instantiates a new ReNewsSsoV1PublicGoogleLoginPost400Response object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewReNewsSsoV1PublicGoogleLoginPost400ResponseWithDefaults() *ReNewsSsoV1PublicGoogleLoginPost400Response {
+	this := ReNewsSsoV1PublicGoogleLoginPost400Response{}
+	return &this
+}
+
+// GetErrors returns the Errors field value
+func (o *ReNewsSsoV1PublicGoogleLoginPost400Response) GetErrors() []ReNewsSsoV1PublicGoogleLoginPost400ResponseErrorsInner {
+	if o == nil {
+		var ret []ReNewsSsoV1PublicGoogleLoginPost400ResponseErrorsInner
+		return ret
+	}
+
+	return o.Errors
+}
+
+// GetErrorsOk returns a tuple with the Errors field value
+// and a boolean to check if the value has been set.
+func (o *ReNewsSsoV1PublicGoogleLoginPost400Response) GetErrorsOk() ([]ReNewsSsoV1PublicGoogleLoginPost400ResponseErrorsInner, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Errors, true
+}
+
+// SetErrors sets field value
+func (o *ReNewsSsoV1PublicGoogleLoginPost400Response) SetErrors(v []ReNewsSsoV1PublicGoogleLoginPost400ResponseErrorsInner) {
+	o.Errors = v
+}
+
+func (o ReNewsSsoV1PublicGoogleLoginPost400Response) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ReNewsSsoV1PublicGoogleLoginPost400Response) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["errors"] = o.Errors
+	return toSerialize, nil
+}
+
+func (o *ReNewsSsoV1PublicGoogleLoginPost400Response) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"errors",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varReNewsSsoV1PublicGoogleLoginPost400Response := _ReNewsSsoV1PublicGoogleLoginPost400Response{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varReNewsSsoV1PublicGoogleLoginPost400Response)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ReNewsSsoV1PublicGoogleLoginPost400Response(varReNewsSsoV1PublicGoogleLoginPost400Response)
+
+	return err
+}
+
+type NullableReNewsSsoV1PublicGoogleLoginPost400Response struct {
+	value *ReNewsSsoV1PublicGoogleLoginPost400Response
+	isSet bool
+}
+
+func (v NullableReNewsSsoV1PublicGoogleLoginPost400Response) Get() *ReNewsSsoV1PublicGoogleLoginPost400Response {
+	return v.value
+}
+
+func (v *NullableReNewsSsoV1PublicGoogleLoginPost400Response) Set(val *ReNewsSsoV1PublicGoogleLoginPost400Response) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableReNewsSsoV1PublicGoogleLoginPost400Response) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableReNewsSsoV1PublicGoogleLoginPost400Response) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableReNewsSsoV1PublicGoogleLoginPost400Response(val *ReNewsSsoV1PublicGoogleLoginPost400Response) *NullableReNewsSsoV1PublicGoogleLoginPost400Response {
+	return &NullableReNewsSsoV1PublicGoogleLoginPost400Response{value: val, isSet: true}
+}
+
+func (v NullableReNewsSsoV1PublicGoogleLoginPost400Response) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableReNewsSsoV1PublicGoogleLoginPost400Response) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
